--- a/app/styles/scss/_content.scss
+++ b/app/styles/scss/_content.scss
@@ -53,14 +53,14 @@ banner
       top: 0;
       left: 0;
       right: 0;
-      background-image: linear-gradient(270deg, rgba(4,25,29 ,.1) 0%, rgba(4,25,29 ,.7) 70%);
+      background-image: linear-gradient(270deg, rgba(4, 25, 29, .1) 0%, rgba(4, 25, 29, .7) 70%);
       width: 100%;
       height: 100%;
       transition: $tr-md;
 
       &.tst-with-map {
         pointer-events: all;
-        background-image: linear-gradient(270deg, rgba(4,25,29 ,0) 0%, rgba(4,25,29 ,.7) 80%);
+        background-image: linear-gradient(270deg, rgba(4, 25, 29, 0) 0%, rgba(4, 25, 29, .7) 80%);
 
         &.tst-active {
           pointer-events: none;
@@ -77,7 +77,7 @@ banner
       width: 35px;
       border-radius: 50%;
       font-size: 14px;
-      background-color: rgba(242,246,247 ,.3);
+      background-color: rgba(242, 246, 247, .3);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -93,7 +93,7 @@ banner
       top: 0;
       left: 0;
       right: 0;
-      background-image: linear-gradient(270deg, rgba(4,25,29 ,.3) 0%, rgba(4,25,29 ,.80) 70%);
+      background-image: linear-gradient(270deg, rgba(4, 25, 29, .3) 0%, rgba(4, 25, 29, .80) 70%);
       width: 100%;
       height: 100%;
     }
@@ -150,6 +150,7 @@ banner
     margin-top: 0 !important;
   }
 }
+
 @media (max-width: 790px) {
   .tst-banner {
     height: calc(100vh - 40px);
@@ -211,6 +212,7 @@ banner
     }
   }
 }
+
 /*-------------------------
 call to action
 -------------------------*/
@@ -249,14 +251,14 @@ call to action
       top: 0;
       left: 0;
       right: 0;
-      background-image: linear-gradient(270deg, rgba(4,25,29 ,.1) 0%, rgba(4,25,29 ,.7) 70%);
+      background-image: linear-gradient(270deg, rgba(4, 25, 29, .1) 0%, rgba(4, 25, 29, .7) 70%);
       width: 100%;
       height: 100%;
       transition: $tr-md;
 
       &.tst-with-map {
         pointer-events: all;
-        background-image: linear-gradient(270deg, rgba(4,25,29 ,0) 0%, rgba(4,25,29 ,.7) 80%);
+        background-image: linear-gradient(270deg, rgba(4, 25, 29, 0) 0%, rgba(4, 25, 29, .7) 80%);
 
         &.tst-active {
           pointer-events: none;
@@ -273,7 +275,7 @@ call to action
       width: 35px;
       border-radius: 50%;
       font-size: 14px;
-      background-color: rgba(242,246,247 ,.3);
+      background-color: rgba(242, 246, 247, .3);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -304,6 +306,7 @@ call to action
     object-position: center;
   }
 }
+
 @media (max-width: 992px) {
   .tst-call-to-action {
     & .tst-cta-frame {
@@ -313,6 +316,7 @@ call to action
     }
   }
 }
+
 /*-------------------------
 about
 -------------------------*/
@@ -321,7 +325,7 @@ about
   overflow: hidden;
   padding-bottom: 100%;
   border-radius: 5px;
-  box-shadow: 0 5px 10px 0 rgba(26,47,51,0.11);
+  box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.11);
 
   &.tst-video-cover {
     padding-bottom: 60%;
@@ -344,7 +348,7 @@ about
     top: 0;
     left: 0;
     right: 0;
-    background-color: rgba(4,25,29 ,.3);
+    background-color: rgba(4, 25, 29, .3);
     width: 100%;
     height: 100%;
   }
@@ -362,13 +366,13 @@ about
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 5px 10px 0 rgba(26,47,51,0.11);
+    box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.11);
     font-size: 18px;
     padding-left: 3px;
     transition: $tr-sm;
 
     &:hover {
-      filter:brightness(108%);
+      filter: brightness(108%);
       transform: scale(1.015);
     }
 
@@ -387,10 +391,11 @@ about
     margin-left: -45px;
     margin-top: -45px;
     background-color: $card;
-    box-shadow: 0 5px 10px 0 rgba(26,47,51,0.11);
+    box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.11);
     animation: pulse 1s infinite;
   }
 }
+
 @keyframes pulse {
   0% {
     transform: scale(.7);
@@ -425,6 +430,7 @@ about
     opacity: 1;
   }
 }
+
 /*-------------------------
 icon box
 -------------------------*/
@@ -435,6 +441,7 @@ icon box
     width: 70px;
   }
 }
+
 /*-------------------------
 banner sm
 -------------------------*/
@@ -444,7 +451,7 @@ banner sm
   width: 100%;
   border-radius: 5px;
   background-size: 100%;
-  box-shadow: 0 5px 10px 0 rgba(26,47,51,0.11);
+  box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.11);
 
   & .tst-cover-frame {
     position: absolute;
@@ -469,7 +476,7 @@ banner sm
       top: 0;
       left: 0;
       right: 0;
-      background-color: rgba(4,25,29 ,.5);
+      background-color: rgba(4, 25, 29, .5);
       width: 100%;
       height: 100%;
     }
@@ -519,6 +526,7 @@ banner sm
     }
   }
 }
+
 @media (max-width: 790px) {
   .tst-banner-sm {
     & .tst-text-frame {
@@ -540,6 +548,7 @@ banner sm
     }
   }
 }
+
 /*-------------------------
 counters
 -------------------------*/
@@ -552,6 +561,7 @@ counters
     transform: translateY(5px) translateX(3px);
   }
 }
+
 /*-------------------------
 team
 -------------------------*/
@@ -561,7 +571,7 @@ team
   width: 100%;
   margin-bottom: 60px;
   background-color: $card;
-  box-shadow: 0 5px 10px 0 rgba(26,47,51,0.15);
+  box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.15);
   border-radius: 5px;
 
   & .tst-member-portrait-frame {
@@ -600,10 +610,11 @@ team
     }
   }
 }
+
 /*-------------------------
 testimonials
 -------------------------*/
-.tst-testimonials-slider, 
+.tst-testimonials-slider,
 body .tst-testimonials-slider {
   padding-top: 60px;
   padding-left: 15px;
@@ -616,7 +627,7 @@ body .tst-testimonials-slider {
   position: relative;
   border-radius: 5px;
   padding: 30px;
-  border: dotted 2px rgba(26,47,51 ,.2);
+  border: dotted 2px rgba(26, 47, 51, .2);
   margin-bottom: 60px;
   cursor: default;
   transition: $tr-md;
@@ -632,7 +643,7 @@ body .tst-testimonials-slider {
     font-family: $pf;
     font-size: 220px;
     font-style: italic;
-    text-shadow: 0 2px 7px rgba(26,47,51,0.15);
+    text-shadow: 0 2px 7px rgba(26, 47, 51, 0.15);
     transition: $tr-lg;
   }
 
@@ -657,7 +668,7 @@ body .tst-testimonials-slider {
 
     & .tst-date {
       opacity: 0.6;
-      background-color: rgba(26,47,51,0.20);
+      background-color: rgba(26, 47, 51, 0.20);
       padding: 3px 10px 1px;
       border-radius: 10px;
       font-size: 12px;
@@ -669,7 +680,7 @@ body .tst-testimonials-slider {
 .swiper-slide-active {
   & .tst-testimonial-card {
     background-color: $card;
-    box-shadow: 0 5px 10px 0 rgba(26,47,51,0.11);
+    box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.11);
     border-color: transparent;
 
     & .tst-quote {
@@ -678,12 +689,12 @@ body .tst-testimonials-slider {
     }
   }
 }
+
 /*-------------------------
 blog
 -------------------------*/
 .tst-slider,
-.swiper-container.tst-slider
-{
+.swiper-container.tst-slider {
   padding: 60px 15px 0;
   margin-left: -15px;
   margin-right: -15px;
@@ -698,7 +709,7 @@ blog
 
 .tst-blog-card {
   background-color: $card;
-  box-shadow: 0 5px 10px 0 rgba(26,47,51,0.11);
+  box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.11);
   border-radius: 5px;
 
   & .tst-cover-frame {
@@ -781,13 +792,14 @@ blog
 
   & .tst-date {
     opacity: 0.6;
-    background-color: rgba(26,47,51,0.20);
+    background-color: rgba(26, 47, 51, 0.20);
     padding: 3px 10px 1px;
     border-radius: 10px;
     font-size: 12px;
     line-height: 18px;
   }
 }
+
 @media (max-width: 790px) {
   .tst-read-more {
     flex-direction: column;
@@ -799,6 +811,7 @@ blog
     }
   }
 }
+
 /*-------------------------
 comments
 -------------------------*/
@@ -838,7 +851,7 @@ comments
     float: left;
     border-radius: 50%;
     overflow: hidden;
-    box-shadow: 0 2px 5px 0 rgba(26,47,51,0.11);
+    box-shadow: 0 2px 5px 0 rgba(26, 47, 51, 0.11);
 
     & img {
       width: 100%;
@@ -873,7 +886,7 @@ comments
   border-radius: 5px;
   padding: 30px;
   margin-bottom: 30px;
-  box-shadow: 0 2px 5px 0 rgba(26,47,51,0.11);
+  box-shadow: 0 2px 5px 0 rgba(26, 47, 51, 0.11);
 
   & .tst-comment-head {
     display: flex;
@@ -883,7 +896,7 @@ comments
 
     & .tst-date {
       opacity: 0.6;
-      background-color: rgba(26,47,51,0.20);
+      background-color: rgba(26, 47, 51, 0.20);
       padding: 3px 10px 1px;
       border-radius: 10px;
       font-size: 12px;
@@ -911,6 +924,7 @@ comments
     }
   }
 }
+
 @media (max-width: 790px) {
   .tst-comments-list {
     &:before {
@@ -938,6 +952,7 @@ comments
     width: calc(100% - 50px);
   }
 }
+
 /*-------------------------
 footer
 -------------------------*/
@@ -982,7 +997,7 @@ footer {
       overflow: hidden;
       border-radius: 5px;
       margin-bottom: 40px;
-      box-shadow: 0 5px 10px 0 rgba(26,47,51,0.11);
+      box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.11);
 
       & img {
         display: block;
@@ -1000,7 +1015,7 @@ footer {
         width: 100%;
         height: 100%;
         background-image: none;
-        background-color: rgba(4,25,29 ,.7);
+        background-color: rgba(4, 25, 29, .7);
         position: absolute;
         top: 0;
         left: 0;
@@ -1067,13 +1082,14 @@ footer {
     }
   }
 }
+
 /*-------------------------
 popup
 -------------------------*/
 .tst-popup-bg {
   opacity: 0;
   pointer-events: none;
-  background-image: linear-gradient(270deg, rgba(4,25,29 ,.9) 0%, rgba(4,25,29 ,.9) 70%);
+  background-image: linear-gradient(270deg, rgba(4, 25, 29, .9) 0%, rgba(4, 25, 29, .9) 70%);
   position: fixed;
   top: 0;
   left: 0;
@@ -1093,7 +1109,7 @@ popup
     width: 50%;
     padding: 60px 30px 30px;
     background-color: $wl1;
-    box-shadow: 0 5px 10px 0 rgba(26,47,51,0.15);
+    box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.15);
     border-radius: 10px;
     transition: $tr-md;
 
@@ -1145,6 +1161,7 @@ popup
     }
   }
 }
+
 @media (max-width: 992px) {
   .tst-popup-bg {
     padding: 0 45px;
@@ -1154,11 +1171,13 @@ popup
     }
   }
 }
+
 @media (max-width: 790px) {
   .tst-popup-bg {
     padding: 10px;
   }
 }
+
 /*-------------------------
 breadcrumbs
 -------------------------*/
@@ -1222,6 +1241,7 @@ breadcrumbs
     }
   }
 }
+
 /*-------------------------
 timeline
 -------------------------*/
@@ -1267,7 +1287,7 @@ timeline
           height: 100%;
           object-fit: cover;
           object-position: center;
-          box-shadow: 0 5px 10px 0 rgba(26,47,51,0.11);
+          box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.11);
         }
       }
 
@@ -1346,6 +1366,7 @@ timeline
     }
   }
 }
+
 @media (max-width: 790px) {
   .tst-timeline {
     &:after {
@@ -1408,6 +1429,7 @@ timeline
     }
   }
 }
+
 /*-------------------------
 new menu
 -------------------------*/
@@ -1415,7 +1437,7 @@ new menu
   position: relative;
   overflow: hidden;
   display: flex;
-  border: dotted 2px rgba(26,47,51 ,.2);
+  border: dotted 2px rgba(26, 47, 51, .2);
   border-radius: 5px;
   margin-bottom: 30px;
 
@@ -1448,7 +1470,7 @@ new menu
       justify-content: center;
       border-radius: 50%;
       font-size: 14px;
-      box-shadow: 0 5px 10px 0 rgba(26,47,51,0.11);
+      box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.11);
       transform: scale(.5);
       opacity: 0;
       transition: $tr-md;
@@ -1527,12 +1549,15 @@ new menu
     & .tst-cover {
       width: 30%;
     }
+
     & .tst-menu-item-descr {
       width: 70%;
     }
+
     &:last-child {
       margin-bottom: 0;
     }
+
     &:first-child {
       margin-bottom: 30px;
     }
@@ -1545,10 +1570,12 @@ new menu
   position: relative;
   overflow: hidden;
   border-radius: 5px;
-  box-shadow: 0 5px 10px 0 rgba(26,47,51,0.11);
+  box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.11);
+
   &.tst-menu-ilust-2 {
     height: 200px;
   }
+
   & img {
     object-fit: cover;
     object-position: center;
@@ -1559,16 +1586,18 @@ new menu
     top: 0;
     left: 0;
   }
+
   & .tst-overlay {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    background-image: linear-gradient(270deg, rgba(4,25,29 ,.1) 0%, rgba(4,25,29 ,.7) 70%);
+    background-image: linear-gradient(270deg, rgba(4, 25, 29, .1) 0%, rgba(4, 25, 29, .7) 70%);
     width: 100%;
     height: 100%;
     transition: $tr-md;
   }
+
   & .tsc-ilust-text {
     padding: 60px;
     width: 100%;
@@ -1582,9 +1611,11 @@ new menu
 @media (max-width: 992px) {
   .tst-menu-ilust {
     height: 200px;
+
     &.tst-menu-ilust-2 {
       height: 200px;
     }
+
     & .tsc-ilust-text {
       padding: 60px;
       width: 100%;
@@ -1619,9 +1650,11 @@ sidebar
     align-items: center;
     margin-bottom: 30px;
     margin-top: 30px;
+
     &:first-child {
       margin-top: 0;
     }
+
     &:last-child {
       margin-bottom: 0;
     }
@@ -1629,14 +1662,16 @@ sidebar
     h4 {
       font-size: 18px;
     }
+
     i {
       font-size: 12px;
       opacity: 0.5;
     }
   }
+
   .tst-group-input.tst-group-with-btn {
     position: relative;
-    
+
     input {
       height: 50px;
       position: relative;
@@ -1648,6 +1683,7 @@ sidebar
       border: none;
       font-size: 16px;
     }
+
     button {
       position: absolute;
       top: 0;
@@ -1659,6 +1695,7 @@ sidebar
       transition: 0.3s ease-in-out;
     }
   }
+
   .tst-list {
     margin: 0;
     padding: 0;
@@ -1677,17 +1714,18 @@ sidebar
       }
     }
   }
+
   .tst-keywords {
     display: flex;
     flex-wrap: wrap;
     margin: 0;
     padding: 0;
-    
+
     li {
       list-style: none;
       padding-right: 5px;
       padding-bottom: 5px;
-      
+
       a {
         display: block;
         font-size: 16px;
@@ -1699,6 +1737,7 @@ sidebar
     }
   }
 }
+
 @media (max-width: 992px) {
   .tst-sidebar-frame {
     &.tst-pad-type-1 {
@@ -1712,6 +1751,7 @@ sidebar
     }
   }
 }
+
 @media (max-width: 768px) {
   .tst-sidebar-frame {
     & .tst-sidebar {
