completing landing page (frontend)

--- a/app/styles/scss/_content.scss
+++ b/app/styles/scss/_content.scss
@@ -1050,7 +1050,7 @@ footer {
 
   & .tst-gallery-nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
 
     & .tst-fg-nav {
