--- a/app/styles/scss/_frame.scss
+++ b/app/styles/scss/_frame.scss
@@ -45,6 +45,7 @@ preloader
     }
   }
 }
+
 @keyframes spin-1 {
   0% {
     transform: rotate(360deg);
@@ -61,6 +62,7 @@ preloader
     opacity: 1;
   }
 }
+
 @keyframes spin-2 {
   0% {
     transform: rotate(0deg);
@@ -77,6 +79,7 @@ preloader
     opacity: 0.5;
   }
 }
+
 /*-------------------------
 marcup
 -------------------------*/
@@ -90,7 +93,7 @@ marcup
   position: relative;
   z-index: 99999;
   border-radius: 10px;
-  box-shadow: 0 5px 10px 0 rgba(26,47,51,0.40);
+  box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.40);
   margin-left: 45px;
   margin-right: 45px;
   background-color: $bg;
@@ -120,12 +123,14 @@ marcup
     left: 15px;
   }
 }
+
 @media (max-width: 790px) {
   .tst-content-frame {
     margin-left: 10px;
     margin-right: 10px;
   }
 }
+
 /*-------------------------
 menu
 -------------------------*/
@@ -147,7 +152,7 @@ menu
     padding: 0 30px;
     border-radius: 10px 10px;
     background-color: $card;
-    box-shadow: 0 5px 10px 0 rgba(26,47,51,0.20);
+    box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.20);
     transition: $tr-md;
 
     &:after {
@@ -163,7 +168,7 @@ menu
     }
 
     & .tst-logo {
-      width: 100px;
+      width: 80px;
     }
 
     & nav {
@@ -220,7 +225,7 @@ menu
             border-radius: 5px;
             background-color: $ac;
             flex-direction: column;
-            box-shadow: 0 3px 5px 0 rgba(26,47,51,0.20);
+            box-shadow: 0 3px 5px 0 rgba(26, 47, 51, 0.20);
             transition: $tr-sm;
 
             &:before {
@@ -307,15 +312,16 @@ menu
         }
       }
 
-      & > ul {
-        & > li {
+      &>ul {
+        &>li {
           &:hover {
-            & > a {
+            &>a {
               color: $ac;
             }
           }
+
           &.menu-item-has-children {
-            & > a:after {
+            &>a:after {
               display: inline-block;
               vertical-align: middle;
               font-family: "Font Awesome 5 Free";
@@ -446,6 +452,7 @@ menu
     }
   }
 }
+
 @media (max-width: 992px) {
   .tst-menu-frame {
     width: 100%;
@@ -464,7 +471,7 @@ menu
         opacity: 0;
         pointer-events: none;
         transform: translateY(20px);
-        box-shadow: 0 5px 10px 0 rgba(26,47,51,0.20);
+        box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.20);
         padding: 15px 0;
         text-align: center;
         position: absolute;
@@ -510,7 +517,7 @@ menu
                 display: none;
               }
 
-              & > a {
+              &>a {
                 color: $ac;
               }
             }
@@ -557,6 +564,7 @@ menu
     }
   }
 }
+
 /*-------------------------
 scroll hint
 -------------------------*/
@@ -608,6 +616,7 @@ scroll hint
     }
   }
 }
+
 @keyframes scroll {
   0% {
     transform: translateY(0) translateX(-50%);
@@ -621,6 +630,7 @@ scroll hint
     transform: translateY(0) translateX(-50%);
   }
 }
+
 /*-------------------------
 fade scroll object
 -------------------------*/
