--- a/app/styles/scss/_shop.scss
+++ b/app/styles/scss/_shop.scss
@@ -15,7 +15,7 @@ minicart
   top: 90px;
   right: 0;
   background-color: $card;
-  box-shadow: 0 5px 10px 0 rgba(26,47,51,0.11);
+  box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.11);
   transition: $tr-sm;
 
   &.tst-active {
@@ -41,7 +41,7 @@ minicart
     padding: 30px;
     background-color: $card;
     border-radius: 10px 10px 0 0;
-    border-bottom: solid 1px rgba(26,47,51,0.05);
+    border-bottom: solid 1px rgba(26, 47, 51, 0.05);
   }
 
   & .woocommerce-mini-cart {
@@ -53,7 +53,7 @@ minicart
     overflow-x: hidden;
     height: 100%;
     max-height: 400px;
-    box-shadow: inset 0 5px 5px 0 rgba(26,47,51,0.05);
+    box-shadow: inset 0 5px 5px 0 rgba(26, 47, 51, 0.05);
 
     & .woocommerce-mini-cart-item {
       width: 100%;
@@ -64,7 +64,7 @@ minicart
       padding: 0 50px 0 160px;
       min-height: 90px;
       border-radius: 5px;
-      box-shadow: 0 5px 10px 0 rgba(26,47,51,0.11);
+      box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.11);
       position: relative;
       overflow: hidden;
       list-style-type: none;
@@ -93,7 +93,7 @@ minicart
         line-height: 11px;
         padding-left: 1.5px;
         display: block;
-        transform: scale(0);
+        // transform: scale(0);
         border-radius: 50%;
         font-weight: 300;
         text-align: center;
@@ -106,7 +106,7 @@ minicart
         margin-top: -7px;
         top: 50%;
         right: 20px;
-        transition: $tr-sm;
+        // transition: $tr-sm;
       }
 
       & .attachment-woocommerce_thumbnail {
@@ -120,16 +120,16 @@ minicart
         border-radius: 5px 0 0 5px;
       }
 
-      &:hover {
-        & .remove_from_cart_button {
-          transform: scale(1);
-        }
-      }
+      // &:hover {
+      //   & .remove_from_cart_button {
+      //     transform: scale(1);
+      //   }
+      // }
     }
   }
 
   & .woocommerce-mini-cart__total {
-    border-top: solid 1px rgba(26,47,51,0.05);
+    border-top: solid 1px rgba(26, 47, 51, 0.05);
     padding: 30px 30px 15px;
     margin: 0;
     text-align: center;
@@ -160,10 +160,11 @@ minicart
 
   & .woocommerce-mini-cart__buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     padding: 0 30px 20px;
   }
 }
+
 @media (max-width: 500px) {
   .tst-minicart-window {
     width: calc(100% - 30px);
@@ -176,6 +177,7 @@ minicart
     }
   }
 }
+
 /*-------------------------
 product card
 -------------------------*/
@@ -193,6 +195,7 @@ product card
     margin: 0;
   }
 }
+
 @media (max-width: 790px) {
   .tst-shop-list-header {
     flex-direction: column;
@@ -208,7 +211,7 @@ product card
   overflow: hidden;
   border-radius: 5px;
   background-color: $card;
-  box-shadow: 0 5px 10px 0 rgba(26,47,51,0.20);
+  box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.20);
   margin-bottom: 60px;
 
   & .woocommerce-LoopProduct-link {
@@ -245,7 +248,7 @@ product card
       display: block;
       padding-bottom: 15px;
       margin: 0 30px;
-      border-bottom: dotted 2px rgba(26,47,51 ,.4);
+      border-bottom: dotted 2px rgba(26, 47, 51, .4);
     }
 
     & .price {
@@ -302,6 +305,7 @@ product card
     }
   }
 }
+
 /*-------------------------
 sidebar
 --------------------------*/
@@ -369,7 +373,7 @@ sidebar
       padding: 0 15px 0 160px !important;
       min-height: 90px;
       border-radius: 5px;
-      box-shadow: 0 5px 10px 0 rgba(26,47,51,0.20);
+      box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.20);
       position: relative;
       overflow: hidden;
       list-style-type: none;
@@ -434,6 +438,7 @@ sidebar
     }
   }
 }
+
 @media (max-width: 992px) {
   .widget-area {
     padding-left: 0;
@@ -460,7 +465,7 @@ sidebar
   border-radius: 5px;
   padding-left: 20px;
   position: relative;
-  box-shadow: 0 5px 10px 0 rgba(26,47,51,0.10);
+  box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.10);
 
   &:after {
     position: absolute;
@@ -489,7 +494,7 @@ sidebar
     position: relative;
     padding: 0 20px;
     height: 50px;
-    box-shadow: 0 5px 10px 0 rgba(26,47,51,0.10);
+    box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.10);
     border-radius: 5px;
     background-color: #fff;
     border: none;
@@ -528,7 +533,7 @@ sidebar
     }
 
     &:hover {
-      filter:brightness(108%);
+      filter: brightness(108%);
       transform: scale(1.015);
     }
   }
@@ -558,7 +563,7 @@ cart
     border-radius: 5px !important;
 
     &:hover {
-      filter:brightness(108%);
+      filter: brightness(108%);
       transform: scale(1.015);
     }
   }
@@ -584,7 +589,7 @@ cart
 table {
   background-color: $card;
   width: 100%;
-  box-shadow: 0 5px 10px 0 rgba(26,47,51,0.10);
+  box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.10);
   border: none !important;
   padding: 40px 30px;
 
@@ -629,6 +634,7 @@ table {
 
 .coupon {
   padding-bottom: 0 !important;
+
   & button {
     margin-left: 15px !important;
   }
@@ -665,6 +671,7 @@ table {
 
     &.product-remove {
       width: 15px;
+
       & a.remove {
         transform: scale(.8);
         transition: $tr-sm;
@@ -675,6 +682,7 @@ table {
         background-color: $auxc1;
         color: $bg !important;
         opacity: 1;
+
         &:hover {
           transform: scale(1);
         }
@@ -714,6 +722,7 @@ table {
 
   & table {
     padding: 30px 30px 25px;
+
     & tbody {
       & tr {
         &.cart-subtotal {
@@ -722,6 +731,7 @@ table {
             padding: 0 0 30px !important;
             font-size: 16px;
             font-weight: 400;
+
             &:before {
               text-transform: uppercase !important;
               font-size: 12px;
@@ -729,6 +739,7 @@ table {
               letter-spacing: 1px;
               font-family: $sf;
             }
+
             & .woocommerce-Price-currencySymbol {
               margin-right: 5px;
               display: inline-block;
@@ -753,6 +764,7 @@ table {
             padding: 30px 0 0;
             font-size: 22px;
             font-weight: 300;
+
             &:before {
               text-transform: uppercase !important;
               font-size: 12px;
@@ -760,6 +772,7 @@ table {
               letter-spacing: 1px;
               font-family: $sf;
             }
+
             & .woocommerce-Price-currencySymbol {
               margin-right: 5px;
               display: inline-block;
@@ -801,7 +814,7 @@ table {
   border-radius: 5px !important;
 
   &:hover {
-    filter:brightness(108%);
+    filter: brightness(108%);
     transform: scale(1.015);
   }
 }
@@ -819,6 +832,7 @@ table {
   & .woocommerce-Price-amount {
     font-size: 16px;
     font-weight: 400;
+
     & .woocommerce-Price-currencySymbol {
       margin-right: 5px;
       display: inline-block;
@@ -956,6 +970,7 @@ cart
   justify-content: space-between;
   border-bottom: solid 1px #f2f3f5;
 }
+
 @media (max-width: 992px) {
   .tst-cart-table {
     & .tst-cart-table-header {
@@ -1002,6 +1017,7 @@ cart
     }
   }
 }
+
 @media (max-width: 768px) {
   .tst-cart-btns-frame {
     & .tst-btn-gray {
@@ -1064,7 +1080,7 @@ product
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: dotted 4px rgba(26,47,51 , .2);
+    border-bottom: dotted 4px rgba(26, 47, 51, .2);
 
     & .tst-price {
       height: 70px;
@@ -1119,13 +1135,12 @@ product
   }
 
   & input {
-    margin: 0 5px;
     text-align: center;
     height: 50px;
     width: 60px;
     background-color: $bg;
     position: relative;
-    padding: 0 20px;
+    // padding: 0 20px;
     display: block;
     border: none;
 
@@ -1152,7 +1167,7 @@ gallery
   padding-bottom: 65%;
   border: solid 1px #eee;
 
-  & > img {
+  &>img {
     position: absolute;
     top: 0;
     left: 0;
@@ -1181,7 +1196,7 @@ gallery
   }
 
   &:hover {
-    & > img {
+    &>img {
       transform: scale(1.05);
     }
 
@@ -1245,6 +1260,7 @@ filter
     }
   }
 }
+
 @media (max-width: 768px) {
   .tst-filter {
     margin-bottom: 60px;
@@ -1359,6 +1375,7 @@ features
     }
   }
 }
+
 @media (max-width: 768px) {
   .tst-features-item {
     flex-direction: column;
@@ -1421,6 +1438,7 @@ list
     }
   }
 }
+
 /***************************
 
 grid
@@ -1458,6 +1476,7 @@ grid
 .grid-sizer {
   width: 100%;
 }
+
 @media (max-width: 992px) {
   .tst-masonry-grid {
     & .tst-grid-item {
@@ -1475,6 +1494,7 @@ grid
     }
   }
 }
+
 @media (max-width: 768px) {
   .tst-masonry-grid {
     & .tst-grid-item {
@@ -1492,6 +1512,7 @@ grid
     }
   }
 }
+
 /***************************
 
 tabs
@@ -1513,6 +1534,7 @@ tabs
     }
   }
 }
+
 @media (max-width: 768px) {
   .tst-tab {
     width: 100%;
