--- a/app/styles/scss/_menu.scss
+++ b/app/styles/scss/_menu.scss
@@ -8,7 +8,7 @@ default card
 -------------------------*/
 .tst-menu-book-item {
   background-color: $card;
-  box-shadow: 0 5px 10px 0 rgba(26,47,51,0.15);
+  box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.15);
   border-radius: 5px;
   margin-bottom: 60px;
 
@@ -106,6 +106,7 @@ default card
       width: 70%;
     }
   }
+
   /*-------------------------
   small card
   -------------------------*/
@@ -126,7 +127,7 @@ default card
       width: 130px;
       border-radius: 5px;
       padding-bottom: 0;
-      box-shadow: 0 5px 10px 0 rgba(26,47,51,0.15);
+      box-shadow: 0 5px 10px 0 rgba(26, 47, 51, 0.15);
     }
 
     & .tst-menu-book-descr {
@@ -193,6 +194,7 @@ default card
     transition: $tr-sm;
     border-radius: 5px;
     width: auto;
+
     &.swiper-pagination-bullet-active {
       transform: scale(1) !important;
       border: none !important;
@@ -209,6 +211,7 @@ default card
     background-color: $bg;
   }
 }
+
 @media (max-width: 500px) {
   .tst-menu-book-item {
     &.tst-mbi-3 {
@@ -220,6 +223,54 @@ default card
         width: 100%;
         padding: 0;
       }
+    }
+  }
+}
+
+.tst-restaurant-selector {
+  margin-right: 15px;
+  display: inline-block;
+  vertical-align: middle;
+
+  .tst-location-button {
+    background: transparent;
+    border: none;
+    color: #666;
+    font-size: 12px;
+    padding: 4px 8px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    margin-bottom: 4px;
+
+    &:hover {
+      color: #333;
+    }
+
+    i {
+      font-size: 10px;
+    }
+  }
+
+  select {
+    padding: 8px 12px;
+    border-radius: 5px;
+    border: 1px solid rgba(26, 47, 51, 0.2);
+    background-color: transparent;
+    color: #1a2f33;
+    font-size: 14px;
+    min-width: 200px;
+    cursor: pointer;
+
+    &:focus {
+      outline: none;
+      border-color: rgba(26, 47, 51, 0.4);
+    }
+
+    option {
+      background-color: #fff;
+      color: #1a2f33;
     }
   }
 }
