add delivery locations section + fix restaurant selector, to be continued

--- a/app/styles/scss/style.scss
+++ b/app/styles/scss/style.scss
@@ -54,6 +54,7 @@ p.s. I am available for Freelance hire (UI design, web development). mail: mille
       - nice select
       - fancybox
       - mapbox
+6. delivery-locations
 
 
 --------------------------------------------*/
@@ -65,3 +66,4 @@ p.s. I am available for Freelance hire (UI design, web development). mail: mille
 @import 'menu';
 @import 'shop';
 @import 'custom';
+@import 'delivery-locations';
