restyle restaurant-selector

--- a/app/styles/scss/style.scss
+++ b/app/styles/scss/style.scss
@@ -67,3 +67,4 @@ p.s. I am available for Freelance hire (UI design, web development). mail: mille
 @import 'shop';
 @import 'custom';
 @import 'delivery-locations';
+@import 'custom-select';
