handle checkout validation feedback better and add location-confirmation in checkout

--- a/app/styles/scss/style.scss
+++ b/app/styles/scss/style.scss
@@ -68,3 +68,4 @@ p.s. I am available for Freelance hire (UI design, web development). mail: mille
 @import 'custom';
 @import 'delivery-locations';
 @import 'custom-select';
+@import "checkout";
