--- a/app/styles/scss/_checkout.scss
+++ b/app/styles/scss/_checkout.scss
@@ -1,6 +1,6 @@
 .tst-checkout-form {
     .tst-group-input {
-        margin-bottom: 1.5rem;
+        margin-bottom: 2rem;
         position: relative;
 
         label {
@@ -14,6 +14,7 @@
             &.error {
                 border-color: #FF5252;
                 background-color: rgba(255, 82, 82, 0.05);
+                margin-bottom: 0.25rem;
             }
         }
 
@@ -21,8 +22,8 @@
             color: #FF5252;
             font-size: 0.875rem;
             margin-top: 0.25rem;
-            position: absolute;
-            bottom: -20px;
+            position: relative;
+            display: block;
         }
     }
 
