--- a/app/styles/scss/_checkout.scss
+++ b/app/styles/scss/_checkout.scss
@@ -96,3 +96,29 @@
         transform: rotate(360deg);
     }
 }
+
+.minimum-order-info {
+    background: #f8f9fa;
+    padding: 15px;
+    border-radius: 5px;
+    margin: 10px 0;
+    
+    p {
+        margin: 0;
+        font-weight: 500;
+    }
+    
+    small {
+        display: block;
+        margin-top: 5px;
+        color: #6c757d;
+    }
+    
+    .text-warning {
+        color: #ffc107;
+    }
+    
+    .text-success {
+        color: #28a745;
+    }
+}
