--- a/app/styles/scss/style.scss
+++ b/app/styles/scss/style.scss
@@ -69,3 +69,4 @@ p.s. I am available for Freelance hire (UI design, web development). mail: mille
 @import 'delivery-locations';
 @import 'custom-select';
 @import "checkout";
+@import 'modal';
