fix: user being redirected away from checkout

--- a/app/styles/scss/style.scss
+++ b/app/styles/scss/style.scss
@@ -70,3 +70,4 @@ p.s. I am available for Freelance hire (UI design, web development). mail: mille
 @import 'custom-select';
 @import "checkout";
 @import 'modal';
+@import 'loading';
